@@ -4,12 +4,13 @@ Hash: SHA1
 AUX 080407.config 538 RMD160 1d01b990da1ef148535171432e55a66137bb1084 SHA1 10c57cd072f7daa7d1687a01f433505e1cf3728d SHA256 4d4aa496f638eb1778b9f7b097b793d2c60b1fabe1e5fb4b0794347052b94b50
 DIST heirloom-doctools-080407.tar.bz2 837016 RMD160 662083312232ce15b5d3a43ed3d21e2cdff49845 SHA1 2e997da8fad0700ae2183b04ad7a286f34b94e8b SHA256 43c0f31908aa476bb16f7159a6337008674afe81754d02b577812d734d559c38
 EBUILD heirloom-doctools-080407-r1.ebuild 5008 RMD160 ebf0c1b4d4355e36c87bf4b9e7801f8e6a51b3a4 SHA1 db9097092edb74705f2733ee99e84426c66de42b SHA256 951a041781a556cbd204fe432ab3d5ef95cb40a1cf2d37f4643dd023e6c4b919
-MISC ChangeLog 1139 RMD160 f0ad59946418b803d83898dbce13deaadc2e581b SHA1 f0992955480ae334af1062508afe3ef5ecf12167 SHA256 9f1bbb69b1d9cde6ec6c7fd1d20c771ae1e2cf1194e6c441a70887a5733251eb
+EBUILD heirloom-doctools-080407-r2.ebuild 5870 RMD160 963268658be0b82a9482a44e0687569a0e81dc55 SHA1 290c073f91e562c6a729854ff550b0736d6332a1 SHA256 7f95fd5879290f0e2eee1dd97a6ff004ae4b0b9c305f4c178c50d56d913678d7
+MISC ChangeLog 1356 RMD160 8d4b35ed66b88d927893c0ec9b8d9ecec865c7eb SHA1 393a17bc87b5d0cc47e174339780c2599609bba5 SHA256 3a8cec3b4fe0cebd2fdf2bf61267654dd0792e68300b7d11597698fa09c9b92a
 MISC metadata.xml 408 RMD160 c9fcc55b0e2e058d59b97f826c0e85e75b7ee1d9 SHA1 20f49281157e44cf6525c842f0eafeedfd454a8f SHA256 8b38822af3fabff5f68899e7522cc162821f221aed419a2cd8a769102cf45908
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkrCpNYACgkQAiZjviIA2Xgv3QCdGxZBQ167Kmbl7ZDM7mOtbPuc
-jsAAoN1pfpj2Kx43nAOa5z+vMDYAY/By
-=phVu
+iEYEARECAAYFAkrGcegACgkQAiZjviIA2XjbpwCggYh0TQLz4FdXUnTYhPHdeWQF
+jr0AnRGlSd+rKdi+tLBafjwRjjGHAQHA
+=ifAa
 -----END PGP SIGNATURE-----
