@@ -1,6 +1,12 @@
 # ChangeLog for app-doc/heirloom-doctools
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/heirloom-doctools/Attic/ChangeLog,v 1.2 2009/09/30 00:22:49 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/heirloom-doctools/Attic/ChangeLog,v 1.3 2009/10/02 21:34:47 flameeyes Exp $
+
+*heirloom-doctools-080407-r2 (02 Oct 2009)
+
+  02 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  +heirloom-doctools-080407-r2.ebuild:
+  Revision bump with instructions for man-db and two compatibility symlinks.
 
 *heirloom-doctools-080407-r1 (30 Sep 2009)
 
